SERVER-36024 Relax overzealous dassert in mutable bson