src/mongo/bson/mutable/document.cpp
@@ -944,7 +944,11 @@ public:
 
     inline bool doesNotAlias(StringData s) const {
         // StringData may come from either the field name heap or the leaf builder.
-        return doesNotAliasLeafBuilder(s) && !inFieldNameHeap(s.rawData());
+        return doesNotAliasLeafBuilder(s) && doesNotAliasFieldNameHeap(s);
+    }
+
+    inline bool doesNotAliasFieldNameHeap(StringData s) const {
+        return !inFieldNameHeap(s.rawData());
     }
 
     inline bool doesNotAliasLeafBuilder(StringData s) const {
@@ -2298,7 +2302,7 @@ Document::InPlaceMode Document::getCurrentInPlaceMode() const {
 
 Element Document::makeElementDouble(StringData fieldName, const double value) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2309,8 +2313,8 @@ Element Document::makeElementDouble(StringData fieldName, const double value) {
 
 Element Document::makeElementString(StringData fieldName, StringData value) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
-    dassert(impl.doesNotAlias(value));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(value));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2321,7 +2325,7 @@ Element Document::makeElementString(StringData fieldName, StringData value) {
 
 Element Document::makeElementObject(StringData fieldName) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasFieldNameHeap(fieldName));
 
     Element::RepIdx newEltIdx;
     ElementRep& newElt = impl.makeNewRep(&newEltIdx);
@@ -2350,7 +2354,7 @@ Element Document::makeElementObject(StringData fieldName, const BSONObj& value) 
 
 Element Document::makeElementArray(StringData fieldName) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasFieldNameHeap(fieldName));
 
     Element::RepIdx newEltIdx;
     ElementRep& newElt = impl.makeNewRep(&newEltIdx);
@@ -2381,7 +2385,7 @@ Element Document::makeElementBinary(StringData fieldName,
                                     const mongo::BinDataType binType,
                                     const void* const data) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
     // TODO: Alias check 'data'?
 
     BSONObjBuilder& builder = impl.leafBuilder();
@@ -2393,7 +2397,7 @@ Element Document::makeElementBinary(StringData fieldName,
 
 Element Document::makeElementUndefined(StringData fieldName) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2410,7 +2414,7 @@ Element Document::makeElementNewOID(StringData fieldName) {
 
 Element Document::makeElementOID(StringData fieldName, const OID value) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2421,7 +2425,7 @@ Element Document::makeElementOID(StringData fieldName, const OID value) {
 
 Element Document::makeElementBool(StringData fieldName, const bool value) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2432,7 +2436,7 @@ Element Document::makeElementBool(StringData fieldName, const bool value) {
 
 Element Document::makeElementDate(StringData fieldName, const Date_t value) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2443,7 +2447,7 @@ Element Document::makeElementDate(StringData fieldName, const Date_t value) {
 
 Element Document::makeElementNull(StringData fieldName) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2454,9 +2458,9 @@ Element Document::makeElementNull(StringData fieldName) {
 
 Element Document::makeElementRegex(StringData fieldName, StringData re, StringData flags) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
-    dassert(impl.doesNotAlias(re));
-    dassert(impl.doesNotAlias(flags));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(re));
+    dassert(impl.doesNotAliasLeafBuilder(flags));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2467,7 +2471,8 @@ Element Document::makeElementRegex(StringData fieldName, StringData re, StringDa
 
 Element Document::makeElementDBRef(StringData fieldName, StringData ns, const OID value) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(ns));
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
     builder.appendDBRef(fieldName, ns, value);
@@ -2477,8 +2482,8 @@ Element Document::makeElementDBRef(StringData fieldName, StringData ns, const OI
 
 Element Document::makeElementCode(StringData fieldName, StringData value) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
-    dassert(impl.doesNotAlias(value));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(value));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2489,8 +2494,8 @@ Element Document::makeElementCode(StringData fieldName, StringData value) {
 
 Element Document::makeElementSymbol(StringData fieldName, StringData value) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
-    dassert(impl.doesNotAlias(value));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(value));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2503,8 +2508,8 @@ Element Document::makeElementCodeWithScope(StringData fieldName,
                                            StringData code,
                                            const BSONObj& scope) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
-    dassert(impl.doesNotAlias(code));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(code));
     dassert(impl.doesNotAlias(scope));
 
     BSONObjBuilder& builder = impl.leafBuilder();
@@ -2516,7 +2521,7 @@ Element Document::makeElementCodeWithScope(StringData fieldName,
 
 Element Document::makeElementInt(StringData fieldName, const int32_t value) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2527,7 +2532,7 @@ Element Document::makeElementInt(StringData fieldName, const int32_t value) {
 
 Element Document::makeElementTimestamp(StringData fieldName, const Timestamp value) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2538,7 +2543,7 @@ Element Document::makeElementTimestamp(StringData fieldName, const Timestamp val
 
 Element Document::makeElementLong(StringData fieldName, const int64_t value) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2549,7 +2554,7 @@ Element Document::makeElementLong(StringData fieldName, const int64_t value) {
 
 Element Document::makeElementDecimal(StringData fieldName, const Decimal128 value) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2560,7 +2565,7 @@ Element Document::makeElementDecimal(StringData fieldName, const Decimal128 valu
 
 Element Document::makeElementMinKey(StringData fieldName) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2571,7 +2576,7 @@ Element Document::makeElementMinKey(StringData fieldName) {
 
 Element Document::makeElementMaxKey(StringData fieldName) {
     Impl& impl = getImpl();
-    dassert(impl.doesNotAlias(fieldName));
+    dassert(impl.doesNotAliasLeafBuilder(fieldName));
 
     BSONObjBuilder& builder = impl.leafBuilder();
     const int leafRef = builder.len();
@@ -2624,7 +2629,7 @@ Element Document::makeElementWithNewFieldName(StringData fieldName, const BSONEl
 }
 
 Element Document::makeElementSafeNum(StringData fieldName, SafeNum value) {
-    dassert(getImpl().doesNotAlias(fieldName));
+    dassert(getImpl().doesNotAliasLeafBuilder(fieldName));
 
     switch (value.type()) {
         case mongo::NumberInt:
